back-end example code init
