# back-end/swagger.yaml
@@ -21,107 +21,58 @@ externalDocs:
   url: https://github.com/uatisdeproblem/itcom-trainings/tree/main/back-end/src/models
 
 tags:
-  - name: Status
-    description: The app's status
-  - name: Books
-    description: The platform's books
+  - name: Communications
+    description: The platform's communications
 
 paths:
-  /status:
+  /communications:
     get:
-      summary: Get the status of the app, depending on its version
-      tags: [Status]
+      summary: Get the communications
+      tags: [Communications]
       parameters:
-        - name: v
+        - name: year
           in: query
-          description: App version; if not specified, targets the latest version
+          description: Get the communications of this year; if not specified, only unarchived ones are returned
           schema:
-            type: string
+            type: number
       responses:
         200:
-          $ref: '#/components/responses/AppStatus'
-  /books:
-    get:
-      summary: Get the books
-      tags: [Books]
-      parameters:
-        - name: top
-          in: query
-          description: Top 10
-          schema:
-            type: boolean
-        - name: publisherId
-          in: query
-          description: Publisher ID
-          schema:
-            type: string
-        - name: paginated
-          in: query
-          description: Whether the result should be paginated
-          schema:
-            type: boolean
-        - name: startFromBookId
-          in: query
-          description: In case of pagination, where it should start
-          schema:
-            type: string
-      responses:
-        200:
-          $ref: '#/components/responses/Books'
+          $ref: '#/components/responses/Communications'
     post:
-      summary: Insert a new book
-      tags: [Books]
+      summary: Insert a new communication
+      tags: [Communications]
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Book'
+              $ref: '#/components/schemas/Communication'
       responses:
         200:
-          $ref: '#/components/responses/Book'
+          $ref: '#/components/responses/Communication'
         400:
           $ref: '#/components/responses/BadParameters'
-    patch:
-      summary: Actions on the books
-      tags: [Books]
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                action:
-                  type: string
-                  enum: [GET_COVER_UPLOAD_URL]
-      responses:
-        200:
-          $ref: '#/components/responses/OperationCompleted'
-        400:
-          $ref: '#/components/responses/BadParameters'
-  /books/{bookId}:
+  /communications/{communicationId}:
     get:
-      summary: Get a book
-      tags: [Books]
+      summary: Get a communication
+      tags: [Communications]
       parameters:
-        - name: bookId
+        - name: communicationId
           in: path
-          description: Book ID
+          description: Communication ID
           required: true
           schema:
             type: string
       responses:
         200:
-          $ref: '#/components/responses/Book'
+          $ref: '#/components/responses/Communication'
     put:
-      summary: Edit a book
-      description: You can edit only your books
-      tags: [Books]
+      summary: Edit a communication
+      tags: [Communications]
       parameters:
-        - name: bookId
+        - name: communicationId
           in: path
-          description: Book ID
+          description: Communication ID
           required: true
           schema:
             type: string
@@ -130,49 +81,19 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Book'
+              $ref: '#/components/schemas/Communication'
       responses:
         200:
-          $ref: '#/components/responses/Book'
-        400:
-          $ref: '#/components/responses/BadParameters'
-    patch:
-      summary: Actions on a book
-      tags: [Books]
-      parameters:
-        - name: bookId
-          in: path
-          description: Book ID
-          required: true
-          schema:
-            type: string
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                action:
-                  type: string
-                  enum: [RATE]
-                rating:
-                  type: number
-                  enum: [1, 2, 3, 4, 5]
-                  description: (RATE)
-      responses:
-        200:
-          $ref: '#/components/responses/OperationCompleted'
+          $ref: '#/components/responses/Communication'
         400:
           $ref: '#/components/responses/BadParameters'
     delete:
-      summary: Delete a book
-      description: You can delete only your books
-      tags: [Books]
+      summary: Delete a communication
+      tags: [Communications]
       parameters:
-        - name: bookId
+        - name: communicationId
           in: path
-          description: Book ID
+          description: Communication ID
           required: true
           schema:
             type: string
@@ -184,54 +105,26 @@ paths:
 
 components:
   schemas:
-    AppStatus:
+    Communication:
       type: object
       additionalProperties: {}
-    # choose for each project one kind of documentation style: lazy or detailed
-    # 1. lazy documentation example:
-    # Book:
-    #  type: object
-    #  additionalProperties: {}
-    # 2. detailed documentation example:
-    Book:
-      type: object
-      properties:
-        bookId:
-          type: string
-          description: The book ID.
-          example: 'abcdef123'
-        publisherId:
-          type: string
-          description: The book's publisher ID.
-          example: 00000000-0000-0000-0000-00000000000
-        title:
-          type: string
-          description: The title of the book.
-          example: Buy the milk
 
   responses:
-    AppStatus:
-      description: The app status for the targeted version
+    Communication:
+      description: A communication
       content:
         application/json:
           schema:
             type: object
-            $ref: '#/components/schemas/AppStatus'
-    Book:
-      description: A book
-      content:
-        application/json:
-          schema:
-            type: object
-            $ref: '#/components/schemas/Book'
-    Books:
-      description: The books
+            $ref: '#/components/schemas/Communication'
+    Communications:
+      description: The communications
       content:
         application/json:
           schema:
             type: array
             items:
-              $ref: '#/components/schemas/Book'
+              $ref: '#/components/schemas/Communication'
     BadParameters:
       description: Bad input parameters
       content:
